tests/aster/x/mochi/rosetta/convert-decimal-number-to-rational.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/convert-decimal-number-to-rational.mochi:24:14

 24 |     let ch = substring(s, i, i+1)
    |              ^

help:
  Declare substring before use
